# resize-key

./: .editorconfig  Cargo.toml  Makefile.toml  README.md  build.rs
.github/: copilot-instructions.md
crates/core/: Cargo.toml
crates/core/src/: ax_constants.c
crates/resize_key/: Cargo.toml  Info.plist
crates/resize_key/resource/: ResizeKey.icns
crates/resize_key/src/: hotkey.rs  main.rs  preferences.rs
crates/resize_key_cli/: Cargo.toml
crates/resize_key_cli/src/: args.rs  main.rs
crates/resize_key_core/: Cargo.toml
crates/wnm/: Cargo.toml
crates/wnm-cli/: Cargo.toml
crates/wnm-cli/src/: args.rs  main.rs
crates/wnm-core/: Cargo.toml  build.rs
crates/wnm-core/src/: ax_constants.c  ax_shim.c  extern_c.rs  frame.rs  hotkey.rs  lib.rs
crates/wnm/src/: main.rs  preferences.rs
crates/wnm/src/data/: default.jsonc
src/: args.rs  ax_constants.c  extern_c.rs  main.rs
