[workspace]
resolver = "3"
members = ["crates/wnm", "crates/wnm-cli", "crates/wnm-core"]
default-members = ["crates/wnm"]

[workspace.package]
edition = "2024"
publish = false

[workspace.dependencies]
wnm-core = { path = "crates/wnm-core" }

anyhow = "1.0.99"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
