[workspace]
resolver = "3"
members = ["crates/resize_key", "crates/resize_key_cli", "crates/core"]
default-members = ["crates/resize_key"]

[workspace.package]
edition = "2024"
publish = false

[workspace.dependencies]
core = { path = "crates/core" }

anyhow = "1.0.99"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
