[package]
name = "resize_key"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[[bin]]
name = "resize-key-app"
path = "src/main.rs"

[dependencies]
global-hotkey = "0.7.0"
objc2 = "0.6.2"
objc2-app-kit = "0.3.1"
objc2-foundation = "0.3.1"

resize_key_core.workspace = true
serde.workspace = true
serde_json.workspace = true
