[package]
name = "resize_key"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[package.metadata.bundle]
name = "ResizeKey"
icons = [
	"icons/icon_16x16.png",
	"icons/icon_16x16@2x.png",
	"icons/icon_32x32.png",
	"icons/icon_32x32@2x.png",
	"icons/icon_128x128.png",
	"icons/icon_128x128@2x.png",
	"icons/icon_256x256.png",
	"icons/icon_256x256@2x.png",
	"icons/icon_512x512.png",
	"icons/icon_512x512@2x.png",
]

[[bin]]
name = "ResizeKey"
path = "src/main.rs"

[dependencies]
global-hotkey = "0.7.0"
objc2 = "0.6.2"
objc2-app-kit = "0.3.1"
objc2-foundation = "0.3.1"

resize_key_core.workspace = true
serde.workspace = true
serde_json.workspace = true
